logo   added  , named changed and  zerops deployment  and yaml  file  added
