# backend/src/employees/dto/update-employee.dto.ts
@@ -28,11 +28,6 @@ export class UpdateEmployeeDto {
   @IsString()
   managerId?: string;
 
-  @ApiProperty({ example: 'uuid-of-working-schedule', required: false })
-  @IsOptional()
-  @IsString()
-  workingScheduleId?: string;
-
   @ApiProperty({ enum: EmployeeStatus, required: false })
   @IsOptional()
   @IsEnum(EmployeeStatus)
